# stateshaper

./: .gitignore  BuildEnvironment.py  CHANGELOG.md  LICENSE  MachineLearning.py  PLUGINS.md  QUICK_START.md  README.md  TripTimeline.py  app.py  b.bat  c.bat  d.bat  data.txt  etc.py  main.py  package-lock.json  package.txt  pyproject.toml  requirements.txt
api/: run_api.py
data/: environments.py  vehicles.py
example_data/: EXAMPLE_DATA.md
example_data/format_data/: FORMAT_DATA.md  FormatData.py
frontend/ads_frontend/src/app/: globals.css  page.js
frontend/graphics_frontend/src/app/: globals.css  layout.js  page.js
frontend/lessons_demo/: package-lock.json
frontend/lessons_demo/src/app/: page.js
frontend/ml_frontend/: next.config.mjs  vercel.json
frontend/ml_frontend/src/app/: page.js
frontend/qa_frontend/src/app/: layout.js  page.js
frontend/stateshaper_web/: package-lock.json  package.json
frontend/stateshaper_web/src/app/: page.js
src/main/: __init__.py  better.py  build.py  check.py  core.py  equations.py  next.py  stateshaper.py  tryout.py
src/main/demos/: DEMOS.md
src/main/demos/fintech_qa/: FintechQA.py
src/main/demos/ml_training/: BuildEnvironment.py  MachineLearning.py  TripTimeline.py
src/main/demos/self_driving/: BuildEnvironment.py  TripTimeline.py
src/main/plugins/: Synthetic.py
src/main/plugins/synthetic/: SYNTHETIC_DATA.md  SyntheticData.py
src/main/tools/compress_json/: CompressJson.py
src/main/tools/derive_vocab/: DERIVE_VOCAB.md  DeriveVocab.py
src/main/tools/functions/: Functions.py
src/stateshaper/: __init__.py  core.py  demo.py  stateshaper.py
src/stateshaper/connector/: Connector.py  Modify.py  Vocab.py
src/stateshaper/tools/derive_vocab/: DeriveVocab.py
src/stateshaper/tools/tiny_state/: TinyState.py
src/stateshaper_ml/: __init__.py  core.py  stateshaper.py
src/stateshaper_ml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/stateshaper_ml/connector/: CONNECTOR.md  Connector.py  Vocab.py
src/stateshaper_ml/demos/: DEMOS.md
src/stateshaper_ml/tools/: TOOLS.md
src/stateshaper_ml/tools/tiny_state/: TinyState.py  (+1 more)
(+8 files in other folders)
