[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stateshaper"            
version = "1.0.0"
description = "An infinite, deterministic token stream derived from just one number."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name="Jason G. Dunn", email="jasongdunn@outlook.com"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/jgddesigns/stateshaper"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
