[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stateshaper"            
version = "0.1.0"
description = "An infinite deterministic token stream derived from just one number."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Jason G. Dunn"}]
dependencies = [
  # "requests>=2.32",
]

[project.urls]
Homepage = "https://github.com/stateshaper/stateshaper/tree/ml_use"
Issues = "https://github.com/stateshaper/stateshaper/tree/ml_use"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
