[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stateshaper-ml"            
version = "1.1.7"
description = "Create an unlimited, memorized chain of synthetic data from a small seed."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Jason G. Dunn"}]
dependencies = [
  # "requests>=2.32",
]

[project.urls]
Homepage = "https://github.com/stateshaper/stateshaper/tree/ml_use"
Issues = "https://github.com/jgddesigns/stateshaper/tree/ml_use"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["stateshaper_ml*"]

[tool.setuptools.package-data]
"stateshaper_ml" = ["example_data/*.json"]